--- a/protected/view/reimbursement_view.html
+++ b/protected/view/reimbursement_view.html
@@ -36,6 +36,9 @@ tr{
              报销项目详情
         </div>
         <div class="card-body">
+            <div class="text-right">
+                <a class="btn btn-danger" href="/reimbursement/edit/<{$reim['rid']}>" role="button">编辑</a>
+            </div>
             <table class="table">
                 <tbody>
                     <tr>
