--- a/protected/view/navbar.html
+++ b/protected/view/navbar.html
@@ -32,10 +32,10 @@
                             <a class="dropdown-item" href="/Reimbursement/approval">开始审批</a>
                         <{/if}>
                         <{if $is_judge||$is_admin}>
-                            <a class="dropdown-item" href="/Reimbursement/Stat">报销统计</a>
+                            <a class="dropdown-item" href="/Reimbursement/view">报销查看</a>
                         <{/if}>
                         <{if $is_admin}>
-                            <a class="dropdown-item" href="/admin">系统管理</a>
+                            <a class="dropdown-item" href="/admin">用户管理</a>
                         <{/if}>
                         <a class="dropdown-item" href="/account/logout">退出登陆</a>
                     </div>
