将数据库里跟时间有关的类型改为了datetime方便统计，修正了管理员可以自降权限的bug，添加了统计报销记录的功能，为报销记录添加了一个通过时间的字段，修改了未登陆时提醒登陆的UI，

--- a/protected/view/admin_usermanage.html
+++ b/protected/view/admin_usermanage.html
@@ -10,8 +10,8 @@
 </style>
 <div class="container">
     <{if isset($err_info_all)}>
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong><h1><{$err_info_all}></h1></strong>
+        <div class="text-center alert alert-danger alert-dismissible fade show" role="alert">
+            <{$err_info_all}>
         </div>
         <script>
             setTimeout('window.location = "/";',1000)
