--- a/protected/view/navbar.html
+++ b/protected/view/navbar.html
@@ -33,6 +33,7 @@
                         <{/if}>
                         <{if $is_judge||$is_admin}>
                             <a class="dropdown-item" href="/Reimbursement/view">报销查看</a>
+                            <a class="dropdown-item" href="/Reimbursement/stat">报销统计</a>
                         <{/if}>
                         <{if $is_admin}>
                             <a class="dropdown-item" href="/admin">用户管理</a>
