--- a/protected/view/reimbursement_approval.html
+++ b/protected/view/reimbursement_approval.html
@@ -83,13 +83,13 @@
                                 <div class="form-check form-check-inline">
                                     <div class="radio">
                                         <label class="form-check-label text-muted">
-                                            <input class="form-check-input" type="radio" name="result" id="result-1" value="1"  required> 批准
+                                            <input class="form-check-input" type="radio" name="result" id="result-1" value="1"  required> <i class="MDI check"></i> 批准
                                         </label>
                                     </div>
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <div class="radio">
                                         <label class="form-check-label text-danger">
-                                            <input class="form-check-input float-right" type="radio" name="result" id="result-0" value="0"  required> 驳回
+                                            <input class="form-check-input" type="radio" name="result" id="result-0" value="0"  required> <i class="MDI block-helper"></i> 驳回
                                         </label>
                                     </div>
                                 </div>
