--- a/protected/view/reimbursement_stat.html
+++ b/protected/view/reimbursement_stat.html
@@ -100,6 +100,8 @@
     </div>
 </div>
 <script>
+    $('.collapse-detials').text('点击查看详情');
+
     $('.collapse-detials').click(function () {
         if ($(this).text() == '点击查看详情') {
             $(this).text('点击收起');
