--- a/protected/view/reimbursement_stat.html
+++ b/protected/view/reimbursement_stat.html
@@ -11,6 +11,9 @@
 #money-sum{
     margin: 2rem 0;
 }
+.rbm-index{
+    cursor: pointer;
+}
 </style>
 <div class="container">
     <div class="card">
