--- a/protected/view/layout.html
+++ b/protected/view/layout.html
@@ -28,6 +28,19 @@
     <{include file="footer.html" }>
     <script>
         $(document).ready(function () { $('body').bootstrapMaterialDesign(); });
+        window.addEventListener("load",function() {
+            var forms = document.getElementsByClassName('needs-validation');
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+
+            }, false);
+        });
     </script>
 </body>
 
